<resources>
    <string name="app_name">StuddyBuddy</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome!</string>
    <string name="register">Register</string>
    <string name="newUser">New User? Sign up here</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="addCourse">Add Courses</string>
    <string name="removeCourse">Remove Course</string>
    <string name="findStudyBuddies">Find Study Buddies</string>
    <string name="remove">Remove</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="groupName">Group Name</string>
    <string name="subject">Subject</string>
    <string name="courseNumber">Course Number</string>
    <string name="courses">Courses</string>
    <string name="newChat">New Chat</string>
    <string name="done">Done</string>
    <string name="registration">Registration</string>
    <string name="profile">Profile</string>
    <string name="enter_message">Enter message</string>
    <string name="profile_picture">profile picture</string>
    <string name="addition_symbol">addition symbol</string>
    <string name="send_message">Send Message</string>
    <string name="create_chatroom">Create Chatroom</string>
    <string name="chats">Chats</string>
    <string name="add_course">Add Course</string>
    <string name="chatroom_name">Chatroom Name</string>
    <string name="new_chat">New Chat</string>
</resources>
