<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="edu.gatech.hackgt.studdybuddy.controller.RegisterActivity">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:drawablePadding="5dip"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:padding="3dp"
        android:scrollHorizontally="true"
        android:singleLine="false"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/registrationText" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:padding="3dp"
        android:typeface="sans"
        app:layout_constraintLeft_toLeftOf="@+id/firstName"
        app:layout_constraintRight_toRightOf="@+id/firstName"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="3dp"
        android:typeface="sans"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/lastName"
        app:layout_constraintRight_toRightOf="@+id/lastName"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:onClick="submit"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="3dp"
        android:typeface="sans"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/usernameText"
        app:layout_constraintRight_toRightOf="@+id/usernameText"
        app:layout_constraintTop_toBottomOf="@+id/usernameText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/confirmPassText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="3dp"
        android:typeface="sans"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/passwordText"
        app:layout_constraintRight_toRightOf="@+id/passwordText"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/cardview_light_background"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="3dp"
        android:typeface="sans"
        app:layout_constraintLeft_toLeftOf="@+id/confirmPassText"
        app:layout_constraintRight_toRightOf="@+id/confirmPassText"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/cancel"
        android:onClick="cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow_white" />

    <TextView
        android:id="@+id/backText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/cancel"
        android:layout_marginLeft="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/registrationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="40sp"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backText" />

</android.support.constraint.ConstraintLayout>
