<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="edu.gatech.hackgt.studdybuddy.controller.ChatRoomListActivity">

    <Button
        android:id="@+id/createChatRoom"
        android:onClick="createRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_chatroom"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/onlineChatroom"
        android:layout_width="354dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="15dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/createChatRoom" />

    <Spinner
        android:id="@+id/chatroomCourseSelector"
        android:layout_width="180dp"
        android:layout_height="27dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="60dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/createChatRoom"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/back"
        android:textColor="@color/cardview_light_background"
        app:layout_constraintLeft_toRightOf="@+id/backArrowPic"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backArrowPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow_white" />

    <TextView
        android:id="@+id/chatsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/chats"
        android:textColor="@color/cardview_light_background"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintLeft_toRightOf="@+id/backButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
